# Mobile-Robot-Project

./: .gitignore  CMakeLists.txt  package.xml
config/calibration/: calibration.cpp
controller/mobile_robot_code/: mobile_robot_code.ino
controller/src/: remote_controller.py
include/: object_detector.h
src/: object_detection.cpp  object_detector.h  test.cpp  yolo_webcam.py
